--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div id="downloadContainer"></div>
   <script> 
     url = ""
-    downloadurl = "https://ps3iso.cdntools.repl.co/"
+    downloadurl = "https://epicminer256.github.io/ps3isodl/"
     
     contentElement = document.getElementById('downloadContainer')
     
