--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
             </button>\
             <button onclick="genPSLinks(\'/dev_usb000/PS3ISO/\')">\
               <img alt="" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAFpJREFUOE9jZMAN/qNJPWBgYFBEV85IwACQPMggZBpFCyEDCFpIUwMasHgPQwyXC9ADEGYWRkCSagDIIBQ9owagBQhStOGKhZEUiPcZGBgUsCTlAwwMDI7I4gDtThURBBXYhwAAAABJRU5ErkJggg==" />\
-              #0\
+              Right USB\
             </button>\
-            <button onclick="genPSLinks(\'/dev_usb001/PS3ISO/\')">\
+            <button onclick="genPSLinks(\'/dev_usb006/PS3ISO/\')">\
               <img alt="" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAFpJREFUOE9jZMAN/qNJPWBgYFBEV85IwACQPMggZBpFCyEDCFpIUwMasHgPQwyXC9ADEGYWRkCSagDIIBQ9owagBQhStOGKhZEUiPcZGBgUsCTlAwwMDI7I4gDtThURBBXYhwAAAABJRU5ErkJggg==" />\
-              #1\
+              Left USB\
             </button>\
           </div>\
         </div>\
